--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -18,7 +18,7 @@ body {
   display: grid;
   place-items: center;
   font-family: 'Lato', sans-serif;
-  color: #372f4d;
+  color: #352e47;
 }
 
 img {
@@ -210,7 +210,7 @@ svg {
 }
 
 .progress {
-  background-color: #490dfd;
+  background-color: #a587ff;
   border-radius: 5px;
   height: 100%;
   width: 0%;
